# gather

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md  USAGE.md  gather.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: ENTERPRISE-READINESS.md  INTRODUCTION.md  WEB-ENGINE-UPLIFT.md
docs/brand/: README.md
docs/superpowers/: DISCORD-RESEARCH-COLLECTOR-DESIGN.md
docs/superpowers/plans/: 2026-07-10-redacted-official-discord-bot.md
examples/: bench.py  demo.py  gather-demo.html  pipeline.py
gather/: __init__.py
src/gather/: __init__.py  __main__.py  api.py  arxiv.py  availability.py  backends.py  backends_browser.py  backends_stealth.py  benchmark.py  browser.py  browser_evidence.py  cache.py  cli.py  commands.py  corpus_cmd.py  crawl.py  credentials.py  derive.py  digest.py  discord.py  docs.py  dom.py  export.py  extract.py  fastparse.py  federation.py  federation_cmd.py  federation_policy.py  federation_receipt.py  feed.py  fetch.py  flagship.py  interop.py  item.py  mcp.py  method.py  model.py  net.py  ocr.py  payloads.py  (+17 more)
tests/: test_api.py  test_arxiv.py  test_availability.py  test_backends.py  test_backends_browser.py  test_backends_stealth.py  test_benchmark.py  test_browser_evidence.py  test_cache.py  test_cli.py  test_cli_web.py  test_crawl.py  test_credentials.py  test_demo.py  test_derive.py  test_digest.py  test_discord.py  test_docs.py  test_dom.py  test_export.py  test_extract.py  test_fastparse.py  test_federation.py  test_federation_cli.py  test_federation_receipt.py  test_feed.py  test_fetch.py  test_flagship_cli.py  test_hard_sources.py  test_interop.py  test_item.py  test_mcp.py  test_method.py  test_model.py  test_net.py  test_package.py  test_pdf.py  test_provenance.py  test_recall.py  test_run.py  (+11 more)
