[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gather-engine"
version = "1.5.0"
description = "Accountable research intake for difficult sources, with provenance receipts and witnessed digests."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Zain Dana Harper" }]
keywords = [
    "research", "intake", "ingestion", "provenance", "transcripts", "arxiv", "accountability",
    "ocr", "transcription", "headless-browser", "synthesis", "web-scraping", "ssrf-safe",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.6", "mypy>=1.10"]

[project.scripts]
gather = "gather.cli:main"

[project.urls]
Homepage = "https://github.com/HarperZ9/gather"
Repository = "https://github.com/HarperZ9/gather"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.mypy]
python_version = "3.11"
files = ["src/gather"]
